eliminacion de algunas alianzas
estas alianzas no estan vinculadas al proceso

--- a/acerca.html
+++ b/acerca.html
@@ -85,8 +85,8 @@
 
             <div id="quienes" class="d-flex align-items-center justify-content-center">
                 <div class="col-sm-10 col-lg-8" data-aos="zoom-in">
-                    <p class="title text-center">¿Quiénes somos?</p>
-                    <p class="text-justify">Una organización sin ánimo de lucro, de interés social,
+                    <p class="title text-center">Sobre Nosotros</p>
+                    <p class="text-justify">Somos una organización sin ánimo de lucro, de interés social,
                         perteneciente al
                         sector
                         de la economía
@@ -108,7 +108,7 @@
 
             <div id="vision" class="d-flex align-items-center justify-content-center">
                 <div class="col-md-5 text-center" data-aos="zoom-in">
-                    <h3 class="title ">Visión</h3>
+                    <h3 class="title ">Nuestra Visión</h3>
                     <p class="text-justify">
                         La Cooperativa <em></em>"<strong>COOMUTRANSTUR</strong>"</em> se consolidará como una empresa
                         del
@@ -125,7 +125,7 @@
 
             <div id="mision" class="d-flex align-items-center justify-content-center">
                 <div class="col-md-5 text-center" data-aos="zoom-in">
-                    <h3 class="title">Misión</h3>
+                    <h3 class="title">Nuestra Misión</h3>
                     <p class="text-justify">
                         Contribuir al crecimiento económico, social, educativo y cultural de los asociados y sus
                         familias
@@ -220,6 +220,7 @@
                             <figure class="figure text-center">
                                 <img src="img/nosotros/rolando.jpg" alt="" srcset="" class="img_adaptada2 lazy">
                                 <figcaption class="figure-caption">Rolando Rivas Arboleda</figcaption>
+                                <span class="text-dark">Lider Comunitario</span>
                             </figure>
                             <figure class="figure text-center">
                                 <img src="img/nosotros/virgilio.jpg" alt="" srcset="" class="img_adaptada2 lazy">
@@ -246,6 +247,195 @@
                             según el caso, son simultáneamente los aportantes y los gestores de la empresa, creada con
                             el objeto de producir o distribuir conjunta y eficientemente bienes o servicios para
                             satisfacer las necesidades de sus asociados y de la comunidad en general.</p>
+                        <a href="http://www.orgsolidarias.gov.co/qu%C3%A9-es-una-cooperativa-y-c%C3%B3mo-se-conforma"><span
+                                class="float-right">Organizaciones Solidarias - Repúlica de Colombia</span></a>
+
+                        <br><br>
+                        <h5>¿Qué significado tiene el desarrollo integral de las comunidades Afro en Colombia?</h5>
+                        <p>El desarrollo humano de las comunidades afro en Colombia tiene como propósito fundamental
+                            trabajar en torno del bien-estar y buen vivir de las comunidades Afro asentadas en y fuera
+                            de los territorios étnicos alrededor de las capacidades de las personas, sus familias
+                            aprovechando oportunidades para el desarrollo sostenible y sustentable. Donde el patrimonio
+                            cultural y biodiverso genera amplias oportunidades de consolidación del proyecto de vida
+                            integral.</p>
+
+                        <br><br>
+                        <h5>¿Qué es la economía solidaria?</h5>
+                        <p>Es una cadena de valor que posee eslabones tales como; producción, transformación,
+                            distribución, comercialización y consumo de bienes y servicios, focalizados en el ser
+                            humano. Con principios y valores tales como; transparencia, educación, autonomía, equidad,
+                            autogestión, ayuda mutua.</p>
+
+                        <br><br>
+                        <h5>¿De que consta el acta de constitución de una cooperativa?</h5>
+                        <img src="" alt="">
+                        <a href="http://prototipo.ccpasto.org.co/index.php/registro-entidades-privadas-sin-animo-de-lucro-epsal/55-5-modelos-actas-de-constitucion/213-5-acta-de-constitucion-cooperativa-de-trabajo-asociado?hitcount=0"><span
+                                class="float-right">Acta de Constitución Cooperativa de Trabajo Asociado</span></a>
+
+                        <br><br>
+                        <h5>¿Cuáles son los aspectos a tener en cuenta en los estatutos de una cooperativa?</h5>
+                        <ol>
+                            <li>Razón social</li>
+                            <li>Aspectos generales</li>
+                            <ul>
+                                <li>Naturaleza y razon social, domicilio y ambito territorial, duracion</li>
+                            </ul>
+                            <li>Objetivos y actividades del acuerdo cooperativo</li>
+                            <ul>
+                                <li>Objetivos
+                                    Actividades
+                                    Actos cooperativos y sujeción a los principios
+                                    Amplitud administrativa y de operaciones
+                                    Reglamento de los servicios
+                                    Convenios para prestaciones de servicios
+                                    Prestación de servicios al público no asociado
+                                </li>
+                            </ul>
+                            <li>Asociados</li>
+                            <ul>
+                                <li>
+                                    Calidad de asociados
+                                    Condiciones de admisión para personas naturales
+                                    Condiciones de admisión para personas jurídicas
+                                    Termino para resolver la admisión
+                                    Deberes de los asociados
+                                    Derecho de los asociados
+                                    Perdida de la calidad de asociado.
+                                    Retiro voluntario
+                                    Reingreso posterior al retiro voluntario
+                                    Retiro por perdida de calidades condiciones para ser asociados
+                                    Muerte del asociado o disolución para liquidación de la persona jurídica
+                                    Exclusión
+                                    Procedimiento para la exclusión del asociado
+                                    Notificación del recurso
+                                    Consideración del recurso y ejecución de la providencia
+                                    Efectos de la perdida de la calidad de asociado
+                                </li>
+                            </ul>
+                            <li>Régimen disciplinario</li>
+                            <ul>
+                                <li>
+                                    Mantenimientos de la disciplina social y sanciones
+                                    Amonestación
+                                    Sanciones pecuniarias
+                                    Suspensión al uso de servicios
+                                    Suspensión total de derechos
+                                </li>
+                            </ul>
+                            <li>Régimen económico patrimonio social-ejercicio económico-aplicación de antecedentes</li>
+                            <ul>
+                                <li>Patrimonio
+                                    Aportes sociales individuales características
+                                    Suscripción y pago de aportes sociales individuales ordinarios
+                                    Incremento de los aportes sociales individuales y otras modalidades de aportación
+                                    Aportes extraordinarios
+                                    Amortización de aportes
+                                    Devoluciones de aportes
+                                    Monto mínimo de aportes sociales de la cooperativa
+                                    Reservas-constitución y utilización
+                                    Fondos- constitución y utilización
+                                    Incremento de las reservas y fondos
+                                    Auxilio y donaciones
+                                    Ejercicio económico
+                                    Destinaciones de excedentes
+                                </li>
+                            </ul>
+                            <li>Régimen de organización interna</li>
+                            <ul>
+                                <li>Órganos de administración
+                                    Asamblea general
+                                    Asamblea general de delegados
+                                    Clases de asamblea general
+                                    Convocatoria
+                                    Examen de documentos e informes previo a la asamblea general ordinaria
+                                    Competencia para convocar a asamblea general
+                                    Normas para la asamblea
+                                    Funciones de la asamblea
+                                    Consejo de administración
+                                    Condiciones para la elección de miembros del consejo de administración
+                                    Funcionamiento
+                                    Remoción de miembros del consejo de administración
+                                    Concejeros suplentes
+                                    Funciones del concejo de administración
+                                    Director ejecutivo
+                                    Condiciones para desempeñar el cargo de director ejecutivo
+                                    Suplencia del director ejecutivo
+                                    Funciones del director ejecutivo
+                                    Comités y comisiones
+                                    Comité de apelaciones
+                                    Comité de educación
+                                </li>
+                            </ul>
+                            <li>Órganos de inspección y vigilancia</li>
+                            <ul>
+                                <li>
+                                    Junta de vigilancia
+                                    Funciones de la junta de vigilancia
+                                    Revisión fiscal
+                                    Funciones del revisor fiscal
+
+                                </li>
+                            </ul>
+                            <li>Incompatibilidades y prohibiciones</li>
+                            <ul>
+                                <li>Incompatibilidades generales
+                                    Incompatibilidad laboral
+                                    Incompatibilidad del revisor fiscal
+                                    Restricción del voto
+                                    Límite de aportes sociales individuales
+                                    Incompatibilidad en los reglamentos
+                                </li>
+                            </ul>
+                            <li>Régimen de responsabilidad de la cooperativa de los directivos y de los asociados</li>
+                            <ul>
+                                <li>Responsabilidad de la cooperativa
+                                    Responsabilidad del asociado con los acreedores de la cooperativa
+                                    Responsabilidad del asociado con la cooperativa
+                                    Participación en las perdidas
+                                    Responsabilidad de titulares de los órganos de administración y vigilancia
+                                </li>
+                            </ul>
+                            <li>De la solución de conflictos internos</li>
+                            <ul>
+                                <li>Conciliación
+                                    Procedimiento para la conciliación y adopción de otros métodos
+                                </li>
+                            </ul>
+                            <li>Fusión, incorporación, transformación e integración</li>
+                            <li>Procedimiento de disolución liquidación</li>
+                            <ul>
+                                <li>Súper intendencia de economía solidaria</li>
+                            </ul>
+                            <li>Disposiciones fiscales</li>
+                            <ul>
+                                <li>Forma de cómputo del periodo anual
+                                    Reglamentación del estatuto
+                                    Reforma estatuaria
+                                    Normas supletorias
+                                </li>
+                            </ul>
+                            <li>De la inspección y vigilancia gubernamental</li>
+
+                            <li>Aprobación de los estatutos</li>
+                            <li>Vigencia de los estatutos</li>
+
+                        </ol>
+
+                        <br><br>
+                        <h5>¿Qué es trabajo decente?</h5>
+                        <p>Según la OIT (organización internacional del trabajo): Trabajo decente es un concepto que
+                            busca expresar lo que debería ser, en el mundo globalizado, un buen trabajo o un empleo
+                            digno</p>
+
+                        <br><br>
+                        <h5>¿Qué significado tiene el patrimonio cultural del afro del pacifico colombiano?</h5>
+
+                        <h5>¿Por qué San Cipriano, Córdoba y Santa Elena representan un corredor ecoturístico para el
+                            mundo?</h5>
+
+                        <h5>Lecciones aprendidas por parte de la comunidad y las organizaciones asentadas en te
+                            territorio</h5>
+
                     </div>
                 </div>
             </div>
