--- a/alianzas.html
+++ b/alianzas.html
@@ -81,7 +81,7 @@
         </div>
 
         <!-- Div col -->
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/alianza/el buen gusto/1.jpg" data-featherlight="image"><img class="cabecita img-fluid lazy"
@@ -104,9 +104,9 @@
             </div>
           </div>
         </div>
-
+ -->
         <!-- Div col -->
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/alianza/hotel y restaurante david/1.jpg" data-featherlight="image"><img class="cabecita img-fluid"
@@ -129,7 +129,7 @@
                 fotos</button>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -159,7 +159,7 @@
         </div>
 
         <!-- Div col -->
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/alianza/hotel mayesty/1.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/hotel mayesty/1.jpg"></a>
@@ -181,7 +181,7 @@
                 fotos</button>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -235,7 +235,7 @@
         </div>
 
         <!-- Div col -->
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/alianza/Posada Don jose/1.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/Posada Don jose/1.jpg"></a>
@@ -257,7 +257,7 @@
                 fotos</button>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -337,7 +337,7 @@
         </div>
 
         <!-- Div col -->
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <!-- <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <div class="alianza row align-items-center">
             <div class="col text-center">
               <a href="img/alianza/Hotel peña azul/1.jpg" data-featherlight="image"><img class="cabecita img-fluid" src="img/alianza/Hotel peña azul/1.jpg"></a>
@@ -350,16 +350,14 @@
               San Cipriano
 
               <div class="w-100"></div>
-              <!-- <i class="au fas fa-utensils fa-2x" data-toggle="tooltip" data-placement="bottom" title="Restaurante"></i> -->
               <i class="au fas fa-concierge-bell fa-2x" data-toggle="tooltip" data-placement="bottom" title="Hospedaje"></i>
-              <!--  -->
 
               <div class="w-100"></div>
               <button type="button" class="botoncito btn btn-success" data-toggle="modal" data-target="#peña_azul">Ver
                 fotos</button>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Div col -->
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -842,7 +840,7 @@
       </div>
     </div>
     <!-- buen_gusto -->
-    <div class="modal fade" id="buen_gusto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="buen_gusto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -864,9 +862,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- hotel_david -->
-    <div class="modal fade" id="hotel_david" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    <!-- <div class="modal fade" id="hotel_david" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -893,7 +891,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- maga -->
     <div class="modal fade" id="maga" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -923,7 +921,7 @@
       </div>
     </div>
     <!-- mayesty -->
-    <div class="modal fade" id="mayesty" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="mayesty" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -944,7 +942,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- genaro -->
     <div class="modal fade" id="genaro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -996,7 +994,7 @@
       </div>
     </div>
     <!-- don_jose -->
-    <div class="modal fade" id="don_jose" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="don_jose" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -1016,7 +1014,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- ivankar -->
     <div class="modal fade" id="ivankar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -1099,7 +1097,7 @@
       </div>
     </div>
     <!-- peña_azul -->
-    <div class="modal fade" id="peña_azul" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="peña_azul" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -1121,7 +1119,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- doris -->
     <div class="modal fade" id="doris" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
