--- a/cultura.html
+++ b/cultura.html
@@ -70,8 +70,25 @@
         <!-- texto main -->
     </section>
 
-    <video src="video/cultura/video grupo folcrorico cultural de cordoba 4 de Nov. del 2018_Trim.mp4" height="400px"
-        width="100%" controls muted autoplay></video>
+
+    <section>
+        <div class="container text-dark">
+            <h2 class="title text-center">Cultura del pacífico</h2>
+
+            <div class="row">
+                <div class="col">
+                    <p class="text-justify">LA FUNDACIÓN URITHI KONGWE tendrá como Objeto Social, propender por el
+                        desarrollo social y el
+                        mejoramiento de la calidad de vida de las Comunidades Negras asentadas a lo largo y ancho de la
+                        Costa Pacífica Colombiana, en especial en lo que tiene que ver con la protección y salvaguarda
+                        de sus rasgos culturales, su patrimonio ancestral material e inmaterial, junto a su desarrollo
+                        humano sostenible</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- <video src="video/cultura/video grupo folcrorico cultural de cordoba 4 de Nov. del 2018_Trim.mp4" height="400px"
+        width="100%" controls muted autoplay></video> -->
 
 
     <!-- Footer  -->
