--- a/gastronomia.html
+++ b/gastronomia.html
@@ -107,9 +107,12 @@
                 <div class="row d-flex align-items-center">
 
                     <div class="col tarjeta5">
-                        <h4>Sopa de cangrejo</h4>
-                        <p>La sopa de cangrejos es una preparación culinaria en forma de sopa que contiene una especia
-                            de marisco</p>
+                        <h4>Ecocado de camarón</h4>
+                        <p>
+                            El encocado de camarón es una preparación tipica de san cipriano y de la región pacífica de
+                            Colombia</p>
+                            <br>
+                            <p>Ingredientes principales: Camarón de río, leche de coco y otros ingredientes</li>
                     </div>
                     <div class="col mb-4">
                         <img class="img-fluid" src="img/gastronomia/IMG-20181120-WA0007.jpg">
