--- a/cultura.html
+++ b/cultura.html
@@ -76,7 +76,7 @@
             <h2 class="title text-center">Cultura del pacífico</h2>
 
             <div class="row">
-                <div class="col">
+                <div class="col-12 mb-4">
                     <p class="text-justify">LA FUNDACIÓN URITHI KONGWE tendrá como Objeto Social, propender por el
                         desarrollo social y el
                         mejoramiento de la calidad de vida de las Comunidades Negras asentadas a lo largo y ancho de la
@@ -84,12 +84,29 @@
                         de sus rasgos culturales, su patrimonio ancestral material e inmaterial, junto a su desarrollo
                         humano sostenible</p>
                 </div>
+
+                <div class="col-12 mb-4">
+                    <h3>Grupo de danza Herencia Ancestral</h3>
+                    <p>Grupo de danzas Herencia Ancestral, presentación realizada en el corregimiento de córdoba en el
+                        festival folclórico del 2016</p>
+                    <h6>Nombre de la danza: La Molienda</h6>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video class="embed-responsive-item" src="video/Fundación urithi Kongwe_Curruloa Paseao.MP4"
+                            allowfullscreen controls></video>
+                    </div>
+                </div>
+
+                <div class="col">
+
+                    <!-- <h6>Nombre de la danza: La Molienda</h6> -->
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <video class="embed-responsive-item" src="video/Fundación urithi Kongwe_Grupo de danza Herencia Ancestral.MP4"
+                            allowfullscreen controls></video>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- <video src="video/cultura/video grupo folcrorico cultural de cordoba 4 de Nov. del 2018_Trim.mp4" height="400px"
-        width="100%" controls muted autoplay></video> -->
-
 
     <!-- Footer  -->
     <div id="footer" class="row">
