--- a/acerca.html
+++ b/acerca.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/timeline.css">
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
 </head>
@@ -268,6 +270,13 @@
 
                         <br><br>
                         <h5>¿De que consta el acta de constitución de una cooperativa?</h5>
+                        <div class="galery_container row d-flex justify-content-center">
+                            <section data-featherlight-gallery data-featherlight-filter="a">
+                                <a href="img/nosotros/acta de asociado.png"><img class="img_adaptada lazy" src="img/nosotros/acta de asociado.png"></a>
+                            </section>
+                        </div>
+
+
                         <img src="" alt="">
                         <a href="http://prototipo.ccpasto.org.co/index.php/registro-entidades-privadas-sin-animo-de-lucro-epsal/55-5-modelos-actas-de-constitucion/213-5-acta-de-constitucion-cooperativa-de-trabajo-asociado?hitcount=0"><span
                                 class="float-right">Acta de Constitución Cooperativa de Trabajo Asociado</span></a>
@@ -602,6 +611,10 @@
     <script src="js/parallax.min.js"></script>
     <script src="js/aos.js"></script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
+        charset="utf-8"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
+        charset="utf-8"></script>
     <script src="js/app.js"></script>
 
     <script>
