--- a/cultura.html
+++ b/cultura.html
@@ -12,11 +12,13 @@
 
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/timeline.css">
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+    <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="cultura">
     <!-- INDEX -->
     <section class="container-fluid pl-0 pr-0">
         <header class="">
@@ -72,7 +74,7 @@
 
 
     <section>
-        <div class="container text-dark">
+        <div class="container">
             <h2 class="title text-center">Cultura del pacífico</h2>
 
             <div class="row">
@@ -97,7 +99,6 @@
                 </div>
 
                 <div class="col">
-
                     <!-- <h6>Nombre de la danza: La Molienda</h6> -->
                     <div class="embed-responsive embed-responsive-16by9">
                         <video class="embed-responsive-item" src="video/Fundación urithi Kongwe_Grupo de danza Herencia Ancestral.MP4"
@@ -105,6 +106,14 @@
                     </div>
                 </div>
             </div>
+
+            <div class="galery_container row d-flex justify-content-center">
+                <section data-featherlight-gallery data-featherlight-filter="a">
+                    <a href="img/cultura/1.jpg"><img class="img_adaptada lazy" src="img/cultura/1.jpg"></a>
+                    <a href="img/cultura/2.jpg"><img class="img_adaptada lazy" src="img/cultura/2.jpg"></a>
+                </section>
+            </div>
+
         </div>
     </section>
 
@@ -139,5 +148,9 @@
     <script src="js/parallax.min.js"></script>
     <script src="js/aos.js"></script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript"
+        charset="utf-8"></script>
+    <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript"
+        charset="utf-8"></script>
     <script src="js/app.js"></script>
 </body>
